# nebula_raiders

./: .gitignore  README.md  boot.py  pyproject.toml
00_getting_started/: main.py
01_set_your_desk/: main.py
02_crew_roster/: main.py
02_signal_booster/: main.py
04_lost_cadet_emergency_beacon/: main.py
05_alient_piinko_detector/: main.py
lib/: lcd.py  ntp.py
