[project]
name = "nebula_raiders"
version = "0.1.0"
description = "Nebula Raiders Electronics Kit"
authors = [
    {name = "Ramon Meza", email = "ramon_meza@live.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "mpremote>=1.26.1",
    "ruff>=0.14.5",
    "micropython-rp2-pico-w-stubs>=1.20.0.post5",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
reset="mpremote exec 'import machine; machine.reset()'"
upload-lib="mpremote fs cp -r lib :"
upload-boot.composite = [
    "mpremote fs cp boot.py :boot.py",
    "mpremote fs cp secrets.py :secrets.py"
]
upload.composite = [
    "upload-boot",
    "upload-lib",
]
